[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/UI/#1 - Transparent Icons.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/upgrade_bg.png" type="Texture" id=2]
[ext_resource path="res://Sprites/equipment-pro-v1.1/EquipmentPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UpgradePanel.gd" type="Script" id=4]
[ext_resource path="res://Sprites/UI/button_bg.png" type="Texture" id=5]
[ext_resource path="res://Audio/bookFlip2.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="UpgradePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Option1" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 99.0
margin_bottom = 138.0
mouse_filter = 0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Texture" type="Sprite" parent="Option1"]
position = Vector2( 45, 27 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 16
vframes = 20
frame = 148

[node name="Description" type="RichTextLabel" parent="Option1"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 58.0
margin_right = 172.0
margin_bottom = 135.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "example texts"

[node name="Name" type="Label" parent="Option1"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 72.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "Name"
align = 1
valign = 1
autowrap = true

[node name="Price" type="Label" parent="Option1"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 96.0
margin_right = 172.0
margin_bottom = 128.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "$"
align = 1
valign = 1
autowrap = true

[node name="Option2" type="TextureRect" parent="."]
margin_left = 112.0
margin_top = 16.0
margin_right = 203.0
margin_bottom = 138.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Texture" type="Sprite" parent="Option2"]
position = Vector2( 45, 27 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 16
vframes = 20

[node name="Name" type="Label" parent="Option2"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 72.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "Name"
align = 1
valign = 1

[node name="Description" type="RichTextLabel" parent="Option2"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 58.0
margin_right = 172.0
margin_bottom = 165.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "example texts"

[node name="Price" type="Label" parent="Option2"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 96.0
margin_right = 172.0
margin_bottom = 128.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "$"
align = 1
valign = 1
autowrap = true

[node name="Option3" type="TextureRect" parent="."]
margin_left = 216.0
margin_top = 16.0
margin_right = 307.0
margin_bottom = 138.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Texture" type="Sprite" parent="Option3"]
position = Vector2( 45, 27 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 16
vframes = 20
frame = 112

[node name="Name" type="Label" parent="Option3"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 40.0
margin_right = 172.0
margin_bottom = 72.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "Name"
align = 1
valign = 1

[node name="Description" type="RichTextLabel" parent="Option3"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 58.0
margin_right = 172.0
margin_bottom = 165.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = "example texts"

[node name="Price" type="Label" parent="Option3"]
modulate = Color( 0.0784314, 0.0666667, 0.0666667, 1 )
margin_left = 15.0
margin_top = 96.0
margin_right = 172.0
margin_bottom = 128.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = SubResource( 2 )
text = "$"
align = 1
valign = 1
autowrap = true

[node name="Reroll" type="TextureButton" parent="."]
margin_left = 74.0
margin_top = 143.0
margin_right = 139.0
margin_bottom = 176.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="Reroll"]
margin_left = 14.0
margin_top = 11.0
margin_right = 76.0
margin_bottom = 27.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 3 )
text = "Reroll  $10"
align = 1

[node name="Back" type="TextureButton" parent="."]
margin_left = 179.0
margin_top = 143.0
margin_right = 244.0
margin_bottom = 176.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="Back"]
margin_left = 14.0
margin_top = 11.0
margin_right = 76.0
margin_bottom = 27.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 3 )
text = "Back"
align = 1

[node name="clickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="gui_input" from="Option1" to="." method="_on_Option1_gui_input"]
[connection signal="gui_input" from="Option2" to="." method="_on_Option2_gui_input"]
[connection signal="gui_input" from="Option3" to="." method="_on_Option3_gui_input"]
[connection signal="pressed" from="Reroll" to="." method="_on_Reroll_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
